--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -458,7 +458,7 @@
 
   .search-modal {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     position: fixed;
     z-index: 100000;
     background-color: rgba(143, 143, 143, 0.228);
