add categories on the dropdown and hrefing links

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,6 +17,12 @@
   }
 }
 
+.no-product-title {
+  font-size: 14px;
+  font-weight: 300;
+  margin-top: 24px;
+}
+
 * {
   margin: 0;
   padding: 0;
