--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -160,10 +160,12 @@
           flex-direction: column;
           overflow-y: auto;
           gap: 6px;
-          a {
+          .sublink {
+            cursor: pointer;
+            text-transform: capitalize;
             text-decoration: none;
             color: #292d32;
-            font-size: 15px;
+            font-size: 14px;
             transition: 100ms ease-in-out;
             width: 100%;
             padding: 5px 15px;
@@ -185,6 +187,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        gap: 10px;
         .basket,
         .hearth {
           background: #ffffff;
@@ -194,9 +197,9 @@
           align-items: center;
           justify-content: center;
           overflow: hidden;
-          padding: 6px;
-          min-width: 36px;
-          height: 36px;
+          padding: 3px;
+          min-width: 30px;
+          height: 30px;
           overflow: hidden;
           transition: 100ms ease-in-out;
           &:hover {
@@ -409,9 +412,9 @@
         align-items: center;
         justify-content: center;
         overflow: hidden;
-        padding: 6px;
-        min-width: 36px;
-        height: 36px;
+        padding: 3px;
+        min-width: 30px;
+        height: 30px;
         overflow: hidden;
         transition: 100ms ease-in-out;
         &:hover {
