--- a/src/styles/pages/paymentpages.scss
+++ b/src/styles/pages/paymentpages.scss
@@ -19,6 +19,130 @@
         align-items: flex-start;
         justify-content: flex-start;
         flex-direction: column;
+        .local-basket-products-container{
+          width: 100%;
+          height: auto;
+          display: flex;
+          align-items: flex-start;
+          justify-content: flex-start;
+          flex-direction: column;
+          gap: 17px;
+          margin-top: 29px;
+
+          .item-basket {
+            width: 100%;
+            min-height: 108px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 14px 24px;
+            border-radius: 16px;
+            background: #ffffff;
+            box-shadow: 0px 0px 11px 0px #6969691f;
+            .leftbasketproduct {
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+              gap: 16px;
+              .image-product {
+                min-width: 80px;
+                max-width: 80px;
+                height: 80px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                border-radius: 18px;
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  border-radius: 18px;
+                }
+              }
+              .titles {
+                display: flex;
+                align-items: flex-start;
+                justify-content: center;
+                flex-direction: column;
+                gap: 2px;
+                span {
+                  color: #000000;
+                  font-weight: 600;
+                  font-size: 20px;
+                  @include noneOverflow();
+                  -webkit-line-clamp: 1;
+                  line-clamp: 1;
+                  @include Nunito();
+                }
+                p {
+                  @include Nunito();
+                  color: #797b85;
+                  font-weight: 400;
+                  font-size: 16px;
+                  @include noneOverflow();
+                  -webkit-line-clamp: 1;
+                  line-clamp: 1;
+                }
+              }
+            }
+  
+            .rightbasketproduct {
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+              gap: 19px;
+              .price {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                span {
+                  color: #000000;
+                  @include Nunito();
+                  font-size: 20px;
+                  font-weight: 600;
+                  text-transform: uppercase;
+                }
+              }
+  
+              .counter {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                gap: 14px;
+                .decrement,
+                .increment {
+                  min-width: 22px;
+                  cursor: pointer;
+                  transition: 80ms ease-in-out;
+                  height: 22px;
+                  border-radius: 6px;
+                  border: 1px solid #9f9f9f;
+                  padding: 2px;
+                  user-select: none;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  text-align: center;
+                  color: #9f9f9f;
+                  &:hover {
+                    color: #000000;
+                  }
+                  &:active {
+                    transform: scale(0.95);
+                  }
+                }
+                .count {
+                  color: #424242;
+                  font-weight: 400;
+                  @include Nunito();
+                  font-size: 18px;
+                }
+              }
+            }
+          }
+  
+        }
         .isbasketted-products-container {
           margin-top: 29px;
           width: 100%;
@@ -208,6 +332,7 @@
             }
           }
         }
+
       }
 
       .similiar-products {
