--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -1110,9 +1110,10 @@
         pointer-events: none;
         user-select: none;
         width: 200px;
-        height: 300px;
+        max-height: 300px;
+        padding-bottom: 24px;
         background-color: white;
-        box-shadow: 0px 0px 5px 0px rgba(135, 135, 135, 0.049);
+        box-shadow: 0px 0px 5px 0px rgba(135, 135, 135, 0.345);
         border-radius: 16px;
         z-index: 10000;
         top: 130px;
@@ -1124,10 +1125,11 @@
         padding-top: 24px;
         overflow-y: auto;
         gap: 6px;
-        a {
+        .sublink {
           text-decoration: none;
           color: #292d32;
           font-size: 15px;
+          cursor: pointer;
           transition: 100ms ease-in-out;
           width: 100%;
           padding: 5px 15px;
