Add Call Your Modal and Catalogs

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,5 @@
 @import "./global.scss";
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .header-wrapper {
   width: 100%;
@@ -36,7 +37,8 @@
         }
       }
       .search {
-        min-width: 278px;
+        max-width: 203px;
+        width: 100%;
         height: 38px;
         display: flex;
         align-items: center;
@@ -87,6 +89,163 @@
           @include Nunito();
           font-size: 16px;
           font-weight: 600;
+        }
+      }
+
+      .catalog-menu {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .button-catalog-menu {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 8px;
+          padding: 6px 0px;
+          border-radius: 8px;
+          border: none;
+          outline: none;
+          transition: 60ms ease-in-out;
+          cursor: pointer;
+          background-color: transparent;
+
+          &:active {
+            transform: scale(0.99);
+          }
+
+          span {
+            transition: 100ms ease-in-out;
+            color: #43b749;
+            font-size: 18px;
+            font-weight: 400;
+          }
+
+          .list-icon-catalog {
+            transition: 200ms ease-in-out;
+            color: #43b749;
+            font-size: 24px;
+
+            &.active {
+              transform: rotate(90deg);
+            }
+          }
+        }
+
+        .catalog-toggle-menu {
+          opacity: 0;
+          pointer-events: none;
+          user-select: none;
+          transform: translateY(-10px);
+          transition: all 200ms ease-in-out;
+          position: absolute;
+          z-index: 3000;
+          top: 64px;
+          border-radius: 3px;
+          padding-top: 12px;
+          padding-bottom: 12px;
+          left: 0;
+          width: 240px;
+          background: #ffffff;
+          border: 1px solid #e4e7e9;
+          box-shadow: 0px 8px 40px 0px #0000001f;
+
+          &.active {
+            opacity: 1;
+            transform: translateY(0);
+            pointer-events: all;
+            user-select: auto;
+          }
+          .catalog-item {
+            width: 100%;
+          }
+          .sub-category-link {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 12px 16px;
+            cursor: pointer;
+            transition: 100ms ease-in-out;
+            position: relative;
+
+            span {
+              text-align: start;
+              color: #5f6c72;
+              font-weight: 400;
+              font-size: 16px;
+              font-family: "Public Sans", sans-serif;
+            }
+
+            .caret {
+              color: #191c1f;
+              font-size: 16px;
+            }
+
+            &:hover {
+              background-color: #9fffa430;
+
+              span {
+                color: #171717;
+              }
+            }
+          }
+
+          .sub-category-menu {
+            cursor: auto;
+            position: absolute;
+            z-index: 2000;
+            gap: 24px;
+            left: 240px;
+            width: auto;
+            height: auto;
+            overflow-y: auto;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            top: 0;
+            padding: 20px;
+            background: #ffffff;
+            border: 1px solid #e4e7e9;
+            box-shadow: 0px 8px 40px 0px #0000001f;
+            .links {
+              min-width: 250px;
+              width: 100%;
+              display: flex;
+              align-items: flex-start;
+              justify-content: flex-start;
+              flex-direction: column;
+            }
+            .sub-category-img {
+              min-width: 400px;
+              height: 400px;
+              background-color: transparent;
+              display: flex;
+              align-items: flex-start;
+              justify-content: flex-start;
+              flex-direction: column;
+              gap: 16px;
+              span {
+                font-weight: 600;
+                font-size: 16px;
+                font-family: "Public Sans", sans-serif;
+              }
+              .img-wrap {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
+              }
+            }
+          }
         }
       }
     }
