--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -20,6 +20,7 @@
       background-color: transparent;
       .hero {
         width: 100%;
+        height: auto;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -129,6 +130,29 @@
             }
           }
         }
+
+        .swiper {
+          width: 100%;
+          height: 100%;
+        }
+        
+        .swiper-slide {
+          text-align: center;
+          font-size: 18px;
+          background: #fff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        
+        .swiper-slide img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        
+
       }
     }
 
