--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -169,28 +169,57 @@ $border-top-color_1: rgb(57, 190, 57);
   }
 }
 
-.overlay .login-menu-wrapper .login-menu .register-variant .register-form form button[type=submit] .loader-container .loader {
+.overlay
+  .login-menu-wrapper
+  .login-menu
+  .register-variant
+  .register-form
+  form
+  button[type="submit"]
+  .loader-container
+  .loader {
   width: 30px;
   height: 30px;
 }
-.overlay .login-menu-wrapper .login-menu .register-variant .register-form form button[type=submit] .loader-container .loader::after {
+.overlay
+  .login-menu-wrapper
+  .login-menu
+  .register-variant
+  .register-form
+  form
+  button[type="submit"]
+  .loader-container
+  .loader::after {
   width: 24px;
   height: 24px;
   border: 4px solid #dddddd;
 }
 
-.overlay .login-menu-wrapper .login-menu .login-variant .register-form form button[type=submit] .loader-container .loader {
+.overlay
+  .login-menu-wrapper
+  .login-menu
+  .login-variant
+  .register-form
+  form
+  button[type="submit"]
+  .loader-container
+  .loader {
   width: 30px;
   height: 30px;
 }
-.overlay .login-menu-wrapper .login-menu .login-variant .register-form form button[type=submit] .loader-container .loader::after {
+.overlay
+  .login-menu-wrapper
+  .login-menu
+  .login-variant
+  .register-form
+  form
+  button[type="submit"]
+  .loader-container
+  .loader::after {
   width: 24px;
   height: 24px;
   border: 4px solid #dddddd;
 }
-
-
-
 
 .overlay {
   width: 100%;
@@ -688,10 +717,10 @@ $border-top-color_1: rgb(57, 190, 57);
     }
   }
   &.active {
-      opacity: 1;
-      pointer-events: all;
-      user-select: auto;
-      transform: translateX(0);
+    opacity: 1;
+    pointer-events: all;
+    user-select: auto;
+    transform: translateX(0);
   }
 }
 .error {
@@ -706,7 +735,6 @@ $border-top-color_1: rgb(57, 190, 57);
     width: 100%;
   }
 }
-
 
 .range-slider {
   position: relative;
@@ -745,5 +773,211 @@ $border-top-color_1: rgb(57, 190, 57);
   &.active {
     pointer-events: all;
     opacity: 1;
+  }
+}
+
+.call-your-modal-overlay {
+  width: 100%;
+  opacity: 0;
+  pointer-events: none;
+  min-height: 100vh;
+  background-color: rgba(67, 166, 37, 0.162);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  z-index: 100000000;
+  transition: all 200ms ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .call-your-modal {
+    max-width: 655px;
+    width: 100%;
+    background-color: #ffffff;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    position: relative;
+    padding: 32px 50px;
+    gap: 30px;
+    h1 {
+      color: #000000;
+      font-weight: 500;
+      font-size: 36px;
+      width: 100%;
+      text-align: start;
+    }
+    .form {
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      gap: 24px;
+      .field-input {
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        gap: 8px;
+        label {
+          color: #000000;
+          font-weight: 500;
+          font-size: 16px;
+        }
+        input {
+          width: 100%;
+          height: 55px;
+          border-radius: 18px;
+          border: 1px solid #cbcad7;
+          padding-left: 16px;
+          padding-right: 16px;
+          transition: 100ms ease-in-out;
+          outline: none;
+          background-color: transparent;
+          &::placeholder {
+            color: #6f6f6f;
+            font-weight: 400;
+            font-size: 16px;
+          }
+          &:focus {
+            border: 1px solid #43b749;
+          }
+        }
+      }
+    }
+    button {
+      width: 100%;
+      height: 55px;
+      border-radius: 18px;
+      background-color: #43b749;
+      color: #ffffff;
+      font-weight: 400;
+      font-size: 16px;
+      border: none;
+      transition: 100ms ease-in-out;
+      cursor: pointer;
+      &:hover {
+        background-color: transparent;
+        border: 1px solid #43b749;
+        color: black;
+      }
+      &:active {
+        transform: scale(0.99);
+      }
+    }
+    .closebtn {
+      position: absolute;
+      right: 32px;
+      top: 32px;
+      cursor: pointer;
+    }
+  }
+  &.active {
+    pointer-events: all;
+    opacity: 1;
+  }
+}
+
+.thanks-page {
+  margin-top: 180px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 24px;
+  .success {
+    animation: successAnim 1.5s ease-in-out forwards normal;
+    width: 88px;
+    height: 88px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 4px solid #2db224;
+    background-color: #2db2242c;
+    @keyframes successAnim {
+      from {
+        opacity: 0;
+        transform: scale(0.5) rotate(36deg);
+      } to {
+        opacity: 1;
+        transform: scale(1.0) rotate(360deg);
+      }
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: scale-down;
+    }
+  }
+
+  .texts {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 12px;
+    h1 {
+      color: #191c1f;
+      font-weight: 600;
+      font-size: 24px;
+      text-align: center;
+    }
+    p {
+      color: #5f6c72;
+      font-weight: 400;
+      font-size: 14px;
+      text-align: center;
+      max-width: 424px;
+    }
+  }
+
+  .home-btn {
+    margin-top: calc(32px - 24px);
+    max-width: 200px;
+    width: 100%;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px; 
+    border: 2px solid #F94C10;
+    border-radius: 2px;
+    transition: all 200ms ease-in-out;
+    text-decoration: none;
+    img {
+      width: 20px;
+      height: 20px;
+      transition: 200ms ease-in-out;
+    }
+    span {
+      color: #F94C10;
+      font-weight: 700;
+      font-size: 14px;
+      transition: 200ms ease-in-out;
+    }
+    &:hover {
+      background-color: #F94C10;
+      span {
+        color: #fff;
+        transform: translateX(-12px);
+      }
+      img {
+        opacity: 0;
+        transform: translateX(-24px);
+      }
+    }
   }
 }
