--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -143,108 +143,127 @@
           z-index: 3000;
           top: 64px;
           border-radius: 3px;
-          padding-top: 12px;
-          padding-bottom: 12px;
+          padding: 12px 0px;
+          min-width: 240px;
+          width: auto;
           left: 0;
-          width: 240px;
           background: #ffffff;
           border: 1px solid #e4e7e9;
           box-shadow: 0px 8px 40px 0px #0000001f;
+
+          .link-container {
+            width: 100%;
+            border-radius: 4px;
+            height: auto;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-direction: column;
+            .catalog-link {
+              position: relative;
+              width: 100%;
+              height: auto;
+              padding: 8px 18px;
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              text-decoration: none;
+
+              span {
+                font-weight: 400;
+                font-size: 16px;
+                color: #5f6c72;
+              }
+              .down {
+                color: #5f6c72;
+                font-size: 16px;
+                transition: 200ms ease-in-out;
+                &.active {
+                  transform: rotate(-90deg);
+                }
+              }
+              &:hover {
+                background-color: #89898934;
+              }
+
+              .sub-catalog {
+                border-radius: 4px;
+                opacity: 0;
+                pointer-events: none;
+                user-select: none;
+                position: absolute;
+                left: 14.9rem;
+                top: 0;
+                min-width: 600px;
+                height: auto;
+                background-color: white;
+                padding: 12px 18px;
+                cursor: auto;
+                display: flex;
+                gap: 24px;
+                transition: 300ms ease-in-out;
+                align-items: flex-start;
+                justify-content: flex-start;
+                .left {
+                  width: auto;
+                  height: auto;
+                  display: flex;
+                  align-items: flex-start;
+                  justify-content: flex-start;
+                  flex-direction: column;
+                  min-width: 246px;
+                  .catalog-link-inner {
+                    position: relative;
+                    width: 100%;
+                    height: auto;
+                    padding: 8px 18px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    text-decoration: none;
+                    font-weight: 400;
+                    font-size: 16px;
+                    color: #5f6c72;
+                    &:hover {
+                      background-color: #89898934;
+                    }
+                  }
+                }
+                .right {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  overflow: hidden;
+                  width: 450px;
+                  max-height: 300px;
+                  min-height: 300px;
+                  border-radius: 12px;
+                  p {
+                    text-align: center;
+                    font-size: 14px;
+                    color: #606060;
+                  }
+                  img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 12px;
+                  }
+                }
+                &.active {
+                  opacity: 1;
+                  pointer-events: all;
+                  user-select: auto;
+                }
+              }
+            }
+          }
 
           &.active {
             opacity: 1;
             transform: translateY(0);
             pointer-events: all;
             user-select: auto;
-          }
-          .catalog-item {
-            width: 100%;
-          }
-          .sub-category-link {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 12px 16px;
-            cursor: pointer;
-            transition: 100ms ease-in-out;
-            position: relative;
-
-            span {
-              text-align: start;
-              color: #5f6c72;
-              font-weight: 400;
-              font-size: 16px;
-              font-family: "Public Sans", sans-serif;
-            }
-
-            .caret {
-              color: #191c1f;
-              font-size: 16px;
-            }
-
-            &:hover {
-              background-color: #9fffa430;
-
-              span {
-                color: #171717;
-              }
-            }
-          }
-
-          .sub-category-menu {
-            cursor: auto;
-            position: absolute;
-            z-index: 2000;
-            gap: 24px;
-            left: 240px;
-            width: auto;
-            height: auto;
-            overflow-y: auto;
-            display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
-            top: 0;
-            padding: 20px;
-            background: #ffffff;
-            border: 1px solid #e4e7e9;
-            box-shadow: 0px 8px 40px 0px #0000001f;
-            .links {
-              min-width: 250px;
-              width: 100%;
-              display: flex;
-              align-items: flex-start;
-              justify-content: flex-start;
-              flex-direction: column;
-            }
-            .sub-category-img {
-              min-width: 400px;
-              height: 400px;
-              background-color: transparent;
-              display: flex;
-              align-items: flex-start;
-              justify-content: flex-start;
-              flex-direction: column;
-              gap: 16px;
-              span {
-                font-weight: 600;
-                font-size: 16px;
-                font-family: "Public Sans", sans-serif;
-              }
-              .img-wrap {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                overflow: hidden;
-                img {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                }
-              }
-            }
           }
         }
       }
@@ -881,7 +900,9 @@
   }
   //if home page added new class
   &.header-wrapper-isHome {
-    background-color: #212121;
+    position: absolute;
+    top: 60px;
+    background-color: transparent;
     border-bottom: 0px solid transparent;
     .header .right-header .navbar .item-link .linkitem {
       color: #fafafa;
@@ -918,6 +939,13 @@
       }
     }
   }
+}
+
+.header-wrapper-hero {
+  width: 100%;
+  height: 50px;
+  background-color: red;
+  position: absolute;
 }
 
 .top-header-wrapper {
