--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -20,7 +20,7 @@
       background-color: transparent;
       .hero {
         width: 100%;
-        height: auto;
+        height: 800px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -85,6 +85,7 @@
 
           .button-explain {
             margin-top: 30px;
+            padding: 0px 36px;
             min-width: 286px;
             height: 80px;
             display: flex;
