--- a/src/styles/pages/paymentpages.scss
+++ b/src/styles/pages/paymentpages.scss
@@ -638,6 +638,36 @@
                       }
                     }
                   }
+
+                  .tel,
+              .email {
+                width: 100%;
+                height: auto;
+                display: flex;
+                align-items: flex-start;
+                justify-content: flex-start;
+                flex-direction: column;
+                gap: 8px;
+                input {
+                  width: 100%;
+                  height: 55px;
+                  border-radius: 18px;
+                  border: 1px solid #cbcad7;
+                  padding: 20px;
+                  outline: none;
+                  transition: 100ms ease-in-out;
+                  &::placeholder {
+                    color: #6f6f6f;
+                    font-weight: 400;
+                    font-size: 16px;
+                  }
+                  &:focus {
+                    border: 3px solid #43b749;
+                  }
+                }
+              }
+
+
                 }
               }
             }
@@ -1234,6 +1264,7 @@
               gap: 16px;
               .productimg {
                 min-width: 80px;
+                max-width: 80px;
                 height: 80px;
                 display: flex;
                 align-items: center;
