--- a/src/styles/pages/profilepagestyles.scss
+++ b/src/styles/pages/profilepagestyles.scss
@@ -882,6 +882,7 @@
                           gap: 16px;
                           .imageproduct {
                             min-width: 80px;
+                            max-width: 80px;
                             height: 80px;
                             display: flex;
                             align-items: center;
