--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -194,7 +194,7 @@
                 position: absolute;
                 left: 14.9rem;
                 top: 0;
-                min-width: 600px;
+                min-width:246px;
                 height: auto;
                 background-color: white;
                 padding: 12px 18px;
@@ -204,19 +204,12 @@
                 transition: 300ms ease-in-out;
                 align-items: flex-start;
                 justify-content: flex-start;
-                .left {
-                  width: auto;
-                  height: auto;
-                  display: flex;
-                  align-items: flex-start;
-                  justify-content: flex-start;
-                  flex-direction: column;
-                  min-width: 246px;
+             
                   .catalog-link-inner {
                     position: relative;
                     width: 100%;
                     height: auto;
-                    padding: 8px 18px;
+                    padding: 8px 12px;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
@@ -228,28 +221,27 @@
                       background-color: #89898934;
                     }
                   }
-                }
-                .right {
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  overflow: hidden;
-                  width: 450px;
-                  max-height: 300px;
-                  min-height: 300px;
-                  border-radius: 12px;
-                  p {
-                    text-align: center;
-                    font-size: 14px;
-                    color: #606060;
-                  }
-                  img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    border-radius: 12px;
-                  }
-                }
+                // .right {
+                //   display: flex;
+                //   align-items: center;
+                //   justify-content: center;
+                //   overflow: hidden;
+                //   width: 450px;
+                //   max-height: 300px;
+                //   min-height: 300px;
+                //   border-radius: 12px;
+                //   p {
+                //     text-align: center;
+                //     font-size: 14px;
+                //     color: #606060;
+                //   }
+                //   img {
+                //     width: 100%;
+                //     height: 100%;
+                //     object-fit: cover;
+                //     border-radius: 12px;
+                //   }
+                // }
                 &.active {
                   opacity: 1;
                   pointer-events: all;
