--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -524,6 +524,7 @@
                 flex-direction: column;
                 .new-punt,
                 .discount-punt {
+                  min-width: 46px;
                   width: 46px;
                   height: 46px;
                   display: flex;
