--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -97,7 +97,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
         .button-catalog-menu {
           display: flex;
           align-items: center;
@@ -130,132 +129,6 @@
             &.active {
               transform: rotate(90deg);
             }
-          }
-        }
-
-        .catalog-toggle-menu {
-          opacity: 0;
-          pointer-events: none;
-          user-select: none;
-          transform: translateY(-10px);
-          transition: all 200ms ease-in-out;
-          position: absolute;
-          z-index: 3000;
-          top: 64px;
-          border-radius: 3px;
-          padding: 12px 0px;
-          min-width: 240px;
-          width: auto;
-          left: 0;
-          background: #ffffff;
-          border: 1px solid #e4e7e9;
-          box-shadow: 0px 8px 40px 0px #0000001f;
-
-          .link-container {
-            width: 100%;
-            border-radius: 4px;
-            height: auto;
-            display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
-            flex-direction: column;
-            .catalog-link {
-              position: relative;
-              width: 100%;
-              height: auto;
-              padding: 8px 18px;
-              display: flex;
-              align-items: center;
-              justify-content: space-between;
-              text-decoration: none;
-
-              span {
-                font-weight: 400;
-                font-size: 16px;
-                color: #5f6c72;
-              }
-              .down {
-                color: #5f6c72;
-                font-size: 16px;
-                transition: 200ms ease-in-out;
-                &.active {
-                  transform: rotate(-90deg);
-                }
-              }
-              &:hover {
-                background-color: #89898934;
-              }
-
-              .sub-catalog {
-                border-radius: 4px;
-                opacity: 0;
-                pointer-events: none;
-                user-select: none;
-                position: absolute;
-                left: 14.9rem;
-                top: 0;
-                min-width:246px;
-                height: auto;
-                background-color: white;
-                padding: 12px 18px;
-                cursor: auto;
-                display: flex;
-                gap: 24px;
-                transition: 300ms ease-in-out;
-                align-items: flex-start;
-                justify-content: flex-start;
-             
-                  .catalog-link-inner {
-                    position: relative;
-                    width: 100%;
-                    height: auto;
-                    padding: 8px 12px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    text-decoration: none;
-                    font-weight: 400;
-                    font-size: 16px;
-                    color: #5f6c72;
-                    &:hover {
-                      background-color: #89898934;
-                    }
-                  }
-                // .right {
-                //   display: flex;
-                //   align-items: center;
-                //   justify-content: center;
-                //   overflow: hidden;
-                //   width: 450px;
-                //   max-height: 300px;
-                //   min-height: 300px;
-                //   border-radius: 12px;
-                //   p {
-                //     text-align: center;
-                //     font-size: 14px;
-                //     color: #606060;
-                //   }
-                //   img {
-                //     width: 100%;
-                //     height: 100%;
-                //     object-fit: cover;
-                //     border-radius: 12px;
-                //   }
-                // }
-                &.active {
-                  opacity: 1;
-                  pointer-events: all;
-                  user-select: auto;
-                }
-              }
-            }
-          }
-
-          &.active {
-            opacity: 1;
-            transform: translateY(0);
-            pointer-events: all;
-            user-select: auto;
           }
         }
       }
@@ -929,6 +802,9 @@
         opacity: 1;
         transform: translateY(0);
       }
+    }
+    .catalog-menu {
+      display: none !important;
     }
   }
 }
