--- a/src/styles/pages/paymentpages.scss
+++ b/src/styles/pages/paymentpages.scss
@@ -19,316 +19,200 @@
         align-items: flex-start;
         justify-content: flex-start;
         flex-direction: column;
-        .local-basket-products-container{
+        .basket-item-card {
+          user-select: none;
+          position: relative;
           width: 100%;
-          height: auto;
-          display: flex;
-          align-items: flex-start;
-          justify-content: flex-start;
-          flex-direction: column;
-          gap: 17px;
-          margin-top: 29px;
-
-          .item-basket {
-            width: 100%;
-            min-height: 108px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 14px 24px;
-            border-radius: 16px;
-            background: #ffffff;
-            box-shadow: 0px 0px 11px 0px #6969691f;
-            .leftbasketproduct {
-              display: flex;
-              align-items: center;
-              justify-content: flex-start;
-              gap: 16px;
-              .image-product {
-                min-width: 80px;
-                max-width: 80px;
-                height: 80px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                overflow: hidden;
-                border-radius: 18px;
-                img {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  border-radius: 18px;
-                }
-              }
-              .titles {
-                display: flex;
-                align-items: flex-start;
-                justify-content: center;
-                flex-direction: column;
-                gap: 2px;
-                span {
-                  color: #000000;
-                  font-weight: 600;
-                  font-size: 20px;
-                  @include noneOverflow();
-                  -webkit-line-clamp: 1;
-                  line-clamp: 1;
-                  @include Nunito();
-                }
-                p {
-                  @include Nunito();
-                  color: #797b85;
-                  font-weight: 400;
-                  font-size: 16px;
-                  @include noneOverflow();
-                  -webkit-line-clamp: 1;
-                  line-clamp: 1;
-                }
-              }
-            }
-  
-            .rightbasketproduct {
-              display: flex;
-              align-items: center;
-              justify-content: flex-end;
-              gap: 19px;
-              .price {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                span {
-                  color: #000000;
-                  @include Nunito();
-                  font-size: 20px;
-                  font-weight: 600;
-                  text-transform: uppercase;
-                }
-              }
-  
-              .counter {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                gap: 14px;
-                .decrement,
-                .increment {
-                  min-width: 22px;
-                  cursor: pointer;
-                  transition: 80ms ease-in-out;
-                  height: 22px;
-                  border-radius: 6px;
-                  border: 1px solid #9f9f9f;
-                  padding: 2px;
-                  user-select: none;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  text-align: center;
-                  color: #9f9f9f;
-                  &:hover {
-                    color: #000000;
-                  }
-                  &:active {
-                    transform: scale(0.95);
-                  }
-                }
-                .count {
-                  color: #424242;
-                  font-weight: 400;
-                  @include Nunito();
-                  font-size: 18px;
-                }
-              }
-            }
-          }
-  
-        }
-        .isbasketted-products-container {
-          margin-top: 29px;
-          width: 100%;
-          height: auto;
-          display: flex;
-          align-items: flex-start;
-          justify-content: flex-start;
-          flex-direction: column;
-          gap: 17px;
-          .item-basket {
-            width: 100%;
-            min-height: 108px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 14px 24px;
-            border-radius: 16px;
-            background: #ffffff;
-            box-shadow: 0px 0px 11px 0px #6969691f;
-            .leftbasketproduct {
-              display: flex;
-              align-items: center;
-              justify-content: flex-start;
-              gap: 16px;
-              .image-product {
-                min-width: 80px;
-                max-width: 80px;
-                height: 80px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                overflow: hidden;
-                border-radius: 18px;
-                img {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  border-radius: 18px;
-                }
-              }
-              .titles {
-                display: flex;
-                align-items: flex-start;
-                justify-content: center;
-                flex-direction: column;
-                gap: 2px;
-                span {
-                  color: #000000;
-                  font-weight: 600;
-                  font-size: 20px;
-                  @include noneOverflow();
-                  -webkit-line-clamp: 1;
-                  line-clamp: 1;
-                  @include Nunito();
-                }
-                p {
-                  @include Nunito();
-                  color: #797b85;
-                  font-weight: 400;
-                  font-size: 16px;
-                  @include noneOverflow();
-                  -webkit-line-clamp: 1;
-                  line-clamp: 1;
-                }
-              }
-            }
-
-            .rightbasketproduct {
-              display: flex;
-              align-items: center;
-              justify-content: flex-end;
-              gap: 19px;
-              .price {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                span {
-                  color: #000000;
-                  @include Nunito();
-                  font-size: 20px;
-                  font-weight: 600;
-                  text-transform: uppercase;
-                }
-              }
-
-              .counter {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                gap: 14px;
-                .decrement,
-                .increment {
-                  min-width: 22px;
-                  cursor: pointer;
-                  transition: 80ms ease-in-out;
-                  height: 22px;
-                  border-radius: 6px;
-                  border: 1px solid #9f9f9f;
-                  padding: 2px;
-                  user-select: none;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  text-align: center;
-                  color: #9f9f9f;
-                  &:hover {
-                    color: #000000;
-                  }
-                  &:active {
-                    transform: scale(0.95);
-                  }
-                }
-                .count {
-                  color: #424242;
-                  font-weight: 400;
-                  @include Nunito();
-                  font-size: 18px;
-                }
-              }
-            }
-          }
-        }
-
-        .total-price-counter {
-          width: 100%;
-          height: auto;
-          margin-top: 17px;
+          height: 108px;
           display: flex;
           align-items: center;
-          justify-content: flex-end;
+          justify-content: space-between;
           background: #ffffff;
           box-shadow: 0px 0px 11px 0px #6969691f;
           border-radius: 16px;
-          padding-right: 79px;
-          padding-top: 18px;
-          padding-bottom: 18px;
-          span {
-            color: #000000;
-            font-weight: 700;
-            @include Nunito();
-            font-size: 20px;
+          margin-top: 29px;
+          padding: 14px 24px;
+          .left-information {
+            width: 100%;
+            max-width: 383px;
+            height: 80px;
+            min-height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 16px;
+            .image-info {
+              width: 80px;
+              height: 80px;
+              min-width: 80px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              overflow: hidden;
+              border-radius: 18px;
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 18px;
+              }
+            }
+            .descriptions {
+              max-width: 287px;
+              display: flex;
+              width: 100%;
+              height: auto;
+              align-items: flex-start;
+              justify-content: center;
+              flex-direction: column;
+              gap: 2px;
+              h3 {
+                @include Nunito();
+                color: #000000;
+                font-weight: 600;
+                font-size: 20px;
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                line-clamp: 1;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+              }
+              p {
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                max-width: 300px;
+                color: #797b85;
+                font-weight: 400;
+                font-size: 16px;
+              }
+            }
+          }
+
+          .right {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 19px;
+            .price {
+              @include Nunito();
+
+              color: #000000;
+              font-weight: 600;
+              font-size: 20px;
+            }
+
+            .counters {
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+              gap: 14px;
+              button {
+                min-width: 22px;
+                width: 22px;
+                height: 22px;
+                border-radius: 6px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                padding: 2px;
+                border: 1px solid #9f9f9f;
+                background-color: transparent;
+                color: #9f9f9f;
+                font-weight: 400;
+                font-size: 20px;
+                cursor: pointer;
+                outline: none;
+                &:active {
+                  transform: scale(0.99);
+                }
+              }
+              span {
+                color: #424242;
+                font-weight: 400;
+                font-size: 18px;
+              }
+            }
+          }
+
+          .remove-item {
+            position: absolute;
+            z-index: 10;
+            right: 20px;
+            top: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            &:active {
+              transform: scale(0.98);
+            }
           }
         }
 
-        .continue-btn {
-          margin-top: 52px;
-          display: flex;
+        .bottom {
+          margin-top: 17px;
+          background: #ffffff;
+          box-shadow: 0px 0px 11px 0px #6969691f;
+          border-radius: 16px;
           width: 100%;
           height: auto;
+          display: flex;
           align-items: center;
           justify-content: flex-end;
-          .btn {
+          padding: 18px 80px;
+          h5 {
+            @include Nunito();
+            color: #000000;
+            font-weight: 700;
+            font-size: 20px;
+          }
+        }
+        
+        .continue {
+          margin-top: 52px;
+          text-decoration: none;
+          width: 100%;
+          height: auto;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          button {
             min-width: 273px;
+            max-width: 273px;
+            width: 100%;
             height: 48px;
+            background: #43B749;
             border-radius: 18px;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 10px;
-            text-decoration: none;
             border: none;
             outline: none;
-            background-color: #43b749;
+            cursor: pointer;
+            transition: 100ms ease-in-out;
             span {
-              color: #ffffff;
+              color: #FFFFFF;
               font-weight: 400;
               font-size: 16px;
               transition: 200ms ease-in-out;
             }
             img {
               transition: 200ms ease-in-out;
+              min-width: 24px;
               width: 24px;
               height: 24px;
             }
-
             &:hover {
-              span {
-                transform: translateX(20px);
-              }
               img {
-                transform: translateX(30px);
                 opacity: 0;
+                transform: translateX(16px);
               }
-            }
-            &:active {
-              transform: translateY(0.4px);
+              span {
+                transform: translateX(16px);
+              }
             }
           }
         }
@@ -640,34 +524,32 @@
                   }
 
                   .tel,
-              .email {
-                width: 100%;
-                height: auto;
-                display: flex;
-                align-items: flex-start;
-                justify-content: flex-start;
-                flex-direction: column;
-                gap: 8px;
-                input {
-                  width: 100%;
-                  height: 55px;
-                  border-radius: 18px;
-                  border: 1px solid #cbcad7;
-                  padding: 20px;
-                  outline: none;
-                  transition: 100ms ease-in-out;
-                  &::placeholder {
-                    color: #6f6f6f;
-                    font-weight: 400;
-                    font-size: 16px;
+                  .email {
+                    width: 100%;
+                    height: auto;
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    flex-direction: column;
+                    gap: 8px;
+                    input {
+                      width: 100%;
+                      height: 55px;
+                      border-radius: 18px;
+                      border: 1px solid #cbcad7;
+                      padding: 20px;
+                      outline: none;
+                      transition: 100ms ease-in-out;
+                      &::placeholder {
+                        color: #6f6f6f;
+                        font-weight: 400;
+                        font-size: 16px;
+                      }
+                      &:focus {
+                        border: 3px solid #43b749;
+                      }
+                    }
                   }
-                  &:focus {
-                    border: 3px solid #43b749;
-                  }
-                }
-              }
-
-
                 }
               }
             }
@@ -1136,7 +1018,7 @@
               outline: none;
               transition: 100ms ease-in-out;
               background-color: #43b749;
-  
+
               &:hover {
                 background-color: transparent;
                 border: 2px solid #43b749;
@@ -1149,10 +1031,7 @@
               }
             }
           }
-
         }
-
-       
       }
     }
   }
